feat(jenkins): Add endpoint to return the Jenkinsfile contents
